# PlasticSim

./: .classpath  .project  AtomicInfo.txt  LICENSE  README.md  monoclinic crystallographic coords.txt
c&cuda/: Diffraction.c  Diffraction.h  Diffraction64.exp  Diffraction64.lib  HelloWorld.xml  cComplex.c  cComplex.h  cQuaternion.c  cQuaternion.h  cVector.c  cVector.h  compile_w_CUDA_x64.bat  cuDiffraction.cu  cuDiffraction.cu.DirA  cuDiffraction.cu.DirB  cudaComplex.cu  cudaVector.cu  diffraction.cu  diffractionTest.cu  oldDiffraction.cu  set_up.c  set_up.h  simul.c  simul.h  structures.h
doc/: PlasticSim Readme Figures.pptx  PlasticSim Readme.docx
output/: 0_of_32_tetrahedron.inp  0test_eight_boxes.inp  0test_eight_boxes.str  1.5_truncatedBoxes.xyz  1.5_truncatedRotatedBoxes.xyz  110_stars-3shells.lattice  110_stars-5shells.lattice  110_stars-7shells.lattice  12_of_32_tetrahedron.inp  16_of_32_tetrahedron.inp  1test_eight_boxes.inp  20_of_32_tetrahedron.inp  24_of_32_tetrahedron.inp  28_of_32_tetrahedron.inp  2test_eight_boxes.inp  3test_eight_boxes.inp  4_of_32_tetrahedron.inp  4test_eight_boxes.inp  5test_eight_boxes.inp  6test_eight_boxes.inp  7test_eight_boxes.inp  8_of_32_tetrahedron.inp  ElementListAndFormFactors.txt  Molecule 1 of 32 and its surroundings.inp  Molecule 1 of 32 and its surroundings.str  Molecule 10 of 32 and its surroundings.inp  (+45 more)
python/: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
python/notebooks/: example.ipynb  plot_xray_data.ipynb
python/scripts/: convert_xray_to_png.py  sum_xray_files.py
(+99 files in other folders)
