[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plasticsim-python"
version = "0.1.0"
description = "PlasticSim Python analysis project with Jupyter notebooks"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "notebook>=6.4.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-dir]
"" = "src"

